fuel-indexer-tests/macro-data/fail_if_attribute_args_include_self.stderr
error: `self` argument not allowed in handler function.
 --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_args_include_self.rs
  |
  | / #[indexer(
  | |     abi = "./../examples/simple-wasm/contracts/out/debug/contracts-abi.json",
  | |     namespace = "test_namespace",
  | |     identifier = "bar",
  | |     schema = "./../examples/simple-wasm/schema/schema.graphql"
  | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `indexer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_args_include_self.rs
   |
   | }
   |  ^ consider adding a `main` function to `$WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_args_include_self.rs`
